--- a/timeline.html
+++ b/timeline.html
@@ -32,7 +32,7 @@
 					<!-- 4. CHỈNH SỬA LỜI CHÚC CỦA BẠN TẠI ĐÂY-->
 			      <font color="#FAEEE7"><span class="say">Happy birthday my love!</span><br>
 						<span class="say">Do you remember how many days we have known each other ?</span><br>
-						<span class="say">I remember.</span><br>
+						<span class="say">I'm remember.</span><br>
 						<span class="say"> </span><br>
 						<span class="say">The first day I talked to you, I was very nervous.</span><br>
 						<span class="say">I'm afraid you don't want to talk to a stranger.</span><br>
